replace `-UseGCOverheadLimit` by `+UseConcMarkSweepGC` in surefire configuration in order to have a better GC strategy